<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">RunSpotRun</string>
  <string name="activity_title_about">RunSpotRun | About</string>
  <string name="activity_title_home">RunSpotRun | Home</string>
  <string name="activity_title_launch">RunSpotRun</string>
  <string name="activity_title_logon">RunSpotRun | Logon</string>
  <string name="activity_title_review">RunSpotRun | Review</string>
  <string name="activity_title_settings">RunSpotRun | Settings</string>
        
  <string name="preference_allow_automated_uploads">
    preference_allow_automated_uploads
  </string>
  <string name="preference_title_allow_automated_uploads">
    Automate video uploads?
  </string>
  <string name="preference_summary_allow_automated_uploads">
    If manual is selected, you will need to individually upload recorded videos
  </string>
  <string-array name="preference_allow_automated_uploads_names">
    <item>Automatic</item>
    <item>Manual</item>
  </string-array>
  <string-array name="preference_allow_automated_uploads_values">
    <item>automatic</item>
    <item>manual</item>
  </string-array>
  
  <string name="preference_allowed_connection_types_for_upload">
    preference_allowed_connection_types_for_upload
  </string>
  <string name="preference_title_allowed_connection_types_for_upload">
    Video upload connection type?
  </string>
  <string name="preference_summary_allowed_connection_types_for_upload">
    Select WiFi Only to upload videos only when connected to a WiFi network
  </string>
  <string-array name="preference_allowed_connection_types_for_upload_names">
    <item>Wi-Fi Only</item>
    <item>Wi-Fi and 3G</item>
  </string-array>
  <string-array name="preference_allowed_connection_types_for_upload_values">
    <item>wifi</item>
    <item>3g</item>
  </string-array>
  
  <string name="preference_upload_when_plugged_in_only">
    preference_upload_when_plugged_in_only
  </string>
  <string name="preference_title_upload_when_plugged_in_only">
    Upload only when charging?
  </string>
  <string name="preference_summary_upload_when_plugged_in_only">
    If selected, videos will only be uploaded when the phone is plugged
    in and charging
  </string>
  
  <string name="activity_home_camera_button_text">Record</string>
  <string name="activity_home_settings_button_text">Settings</string>
  <string name="activity_home_my_videos_button_text">Review</string>
  <string name="activity_home_about_button_text">About</string>
  <string name="activity_home_logon_button_text">Logon</string>
  <string name="activity_home_not_logged_in_text">
      You are not currently logged in, you can continue
      to use RunSpotRun but your videos and tags will
      not be uploaded until you log in.
  </string>
  <string name="activity_home_exit_button_text">Exit</string>
  
  <string name="activity_home_gps_warning_title_text">
      Enable GPS?
  </string>
  <string name="activity_home_gps_warning_body_text">
      GPS is currently disabled, you can continue without it enabled
      but your spots will lose accuracy.  Press Okay to go to your
      GPS settings or press Ignore to continue with GPS disabled.
  </string>
  <string name="activity_home_gps_warning_okay_button_text">Okay</string>
  <string name="activity_home_gps_warning_ignore_button_text">Ignore</string>
  
  <string name="activity_launch_cancel_button_text">I Do Not Agree</string>
  <string name="activity_launch_confirm_button_text">I Agree</string>
  
  <string name="activity_about_close_button_text">Close</string>
  
  <string name="activity_review_delete">Delete</string>
  <string name="activity_review_upload">Upload</string>
  <string name="activity_review_upload_pending">Pending Upload</string>
  <string name="activity_review_uploading">%s%% Uploaded</string>
  <string name="activity_review_uploaded">Uploaded</string>
  <string name="activity_review_close_button_text">Close</string>
  <string name="activity_review_thumbnail_button_text">View video</string>
  <string name="activity_review_load_button_text">Load More</string>

  <string name="activity_settings_close_button_text">Close</string>
  
  <string name="numeric_0">0</string>
  <string name="numeric_1">1</string>
  <string name="numeric_2">2</string>
  <string name="numeric_3">3</string>
  <string name="numeric_4">4</string>
  <string name="numeric_5">5</string>
  <string name="numeric_6">6</string>
  <string name="numeric_7">7</string>
  <string name="numeric_8">8</string>
  <string name="numeric_9">9</string>
  
  <string name="activity_camera_click_to_tag_text">
      Recording, click anywhere to tag
  </string>
  <string name="activity_camera_submit_tag_text">SPOT</string>
  <string name="activity_camera_submit_hottag_text">HOTSPOT</string> 
  <string name="activity_camera_tag_submitted_text">Spot Submitted</string> 
  <string name="activity_camera_hottag_submitted_text">
      Hot Spot Submitted
  </string>
  <string name="activity_camera_recording_started_text">
      Recording Started
  </string>  
  
  <string name="activity_logon_success_text">Logon was successful</string>
  <string name="activity_logon_failure_text">Logon was unsuccessful</string>
  <string name="activity_logon_close_button_text">Close</string>
  <string name="activity_logon_no_network_text">
      Network is not connected
  </string>

</resources>
