<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  
  <ListPreference 
      android:key="@string/preference_allow_automated_uploads"
      android:title="@string/preference_title_allow_automated_uploads"
      android:summary="@string/preference_summary_allow_automated_uploads"
      android:dialogTitle="@string/preference_title_allow_automated_uploads"
      android:entries="@array/preference_allow_automated_uploads_names"
      android:entryValues="@array/preference_allow_automated_uploads_values"
      android:defaultValue="manual"
      android:layout="@layout/widget_settings" />
  
  <ListPreference 
      android:key="@string/preference_allowed_connection_types_for_upload"
      android:title="@string/preference_title_allowed_connection_types_for_upload"
      android:summary="@string/preference_summary_allowed_connection_types_for_upload"
      android:dialogTitle="@string/preference_title_allowed_connection_types_for_upload"
      android:entries="@array/preference_allowed_connection_types_for_upload_names"
      android:entryValues="@array/preference_allowed_connection_types_for_upload_values"
      android:defaultValue="wifi"
      android:layout="@layout/widget_settings" />
  
  <CheckBoxPreference 
      android:key="@string/preference_upload_when_plugged_in_only"
      android:title="@string/preference_title_upload_when_plugged_in_only"
      android:summary="@string/preference_summary_upload_when_plugged_in_only"
      android:defaultValue="false"
      android:layout="@layout/widget_settings" />

</PreferenceScreen>
