<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/default_theme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityHome">
	
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin"
      android:orientation="vertical">
	
    <Button
        style="@style/activity_home_button"
        android:text="@string/activity_home_camera_button_text"
        android:drawableLeft="@drawable/activity_home_button_record"
        android:alpha="0.75"
        android:onClick="onClickShowCamera" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="@color/light" />
	  
    <Button
        style="@style/activity_home_button"
        android:text="@string/activity_home_my_videos_button_text"
        android:drawableLeft="@drawable/activity_home_button_review"
        android:alpha="0.75"
        android:onClick="onClickShowReview" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="@color/light" />
    
    <Button
        style="@style/activity_home_button"
        android:text="@string/activity_home_settings_button_text"
        android:drawableLeft="@drawable/activity_home_button_settings"
        android:alpha="0.75"
        android:onClick="onClickShowSettings" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="@color/light" />
    
    <Button
        style="@style/activity_home_button"
        android:text="@string/activity_home_about_button_text"
        android:drawableLeft="@drawable/activity_home_button_about"
        android:alpha="0.75"
        android:onClick="onClickShowAbout" />
    
    <LinearLayout 
        android:id="@+id/activity_home_logon_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
      <LinearLayout 
          android:layout_width="match_parent"
          android:layout_height="2dip"
          android:background="@color/light" />
    
      <Button
          style="@style/activity_home_button"
          android:text="@string/activity_home_logon_button_text"
          android:drawableLeft="@drawable/activity_home_button_logon"
          android:alpha="0.75"
          android:onClick="onClickLogon" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textAppearance="?android:attr/textAppearanceLarge"
          android:text="@string/activity_home_not_logged_in_text" />
        
    </LinearLayout>
    	
  </LinearLayout>
	
</ScrollView>
